# ci-workflows

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
.github/actions/apply-on-vm-via-runcommand/: action.yml
.github/workflows/: azure-vm-deploy.yml  branch-janitor.yml  capability-health-probe.yml  ci.yml  docker-build-publish.yml  example-callers.yml  fresh-install-smoke.yml  meta-quality-gate.yml  mutation-gate.yml  publish-pypi.yml  python-quality-gate.yml  release.yml  self-ci.yml  sonar-scan.yml  verify-and-close.yml
actions/pre-commit-cached/: action.yml
actions/setup-uv-cached/: action.yml
docs/: COST-OPTIMIZATION.md  IMPLEMENTATION.md  MIGRATION.md
governance/: CODEOWNERS  README.md  STANDARDS.md  agent-sdlc-access-and-hitl.md  dependabot.yml  gate-hardening.md  pre-commit-config.yaml
governance/agent-app-manifests/: README.md  tc-agent-builder.json  tc-agent-consultant.json  tc-agent-growth.json  tc-agent-shape.json
governance/decisions/: ADR-INDEX.md  ADR-POLICY.md
governance/git-hooks/: commit-msg
governance/loop/: README.md  harvest_gate.py  loop_dispatcher.py  loop_governor.py  verify-and-close.md
governance/rulesets/: main.json
governance/scripts/: README.md  bootstrap-repo-governance.sh  preflight.sh  safe-commit.sh
governance/skeletons/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ETHOS.md  README.md  RESOLVER.md  SCORECARD.md  _canonical-standards-banner.md  claude-settings.postToolUse.json
tools/: README.md  pyproject.toml
tools/tc_agent_tools/: __init__.py  agent_token.py
tools/tests/: test_agent_token.py
(+9 files in other folders)
